config/istio/virtualservice.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata: 
    name: edge-cloud
  spec: 
    gateways: 
      - edge-cloud-gateway
    hosts: 
      - edge-cloud.com
    http: 
      - 
        match: 
          - 
            uri: 
              prefix: /api/
        route: 
          - 
            destination: 
              host: api-gateway.edge.svc.cluster.local
              port: 
                number: 80
      - 
        match: 
          - 
            uri: 
              prefix: /
        route: 
          - 
            destination: 
              host: frontend.edge.svc.cluster.local
              port: 
                number: 80
